objects/Quote.object
<CustomObject>
    <fields>
        <fullName>One_Time_Margin_Sum__c</fullName>
        <description>VDO</description>
        <label>One Time Margin % Sum</label>
        <summarizedField>QuoteLineItem.One_Time_Margin_p__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.One_Time_Margin_p__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>One_Time_Margin_p__c</fullName>
        <formula>One_Time_Margin_Sum__c /  QLI_s_With_One_Time_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One Time Margin %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>QLI_s_With_One_Time_Margin__c</fullName>
        <description>VDO</description>
        <label>QLI&apos;s With One Time Margin</label>
        <summaryFilterItems>
            <field>QuoteLineItem.One_Time_Margin_p__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QLI_s_With_Recurring_Margin__c</fullName>
        <description>VDO</description>
        <label>QLI&apos;s With Recurring Margin</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Recurring_Margin_p__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recurring_Margin_Sum__c</fullName>
        <description>VDO</description>
        <label>Recurring Margin % Sum</label>
        <summarizedField>QuoteLineItem.Recurring_Margin_p__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Recurring_Margin_p__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recurring_Margin__c</fullName>
        <formula>Recurring_Margin_Sum__c / QLI_s_With_Recurring_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Margin %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VDOPriceChildItems__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VDOPriceChildItems</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountRecordType__c</fullName>
        <formula>Opportunity.vlocity_cmt__AccountRecordType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountSLA__c</fullName>
        <formula>Opportunity.vlocity_cmt__AccountSLA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CampaignId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DeliveryInstallationStatus__c</fullName>
        <label>Delivery Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeTotal__c</fullName>
        <label>Effective One Time Total</label>
        <summarizedField>QuoteLineItem.vlocity_cmt__EffectiveOneTimeTotal__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveQuoteTotal__c</fullName>
        <formula>vlocity_cmt__EffectiveOneTimeTotal__c +  Tax + ( vlocity_cmt__EffectiveRecurringTotal__c *  vlocity_cmt__NumberOfContractedMonths__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Quote Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveRecurringTotal__c</fullName>
        <label>Effective Recurring Total</label>
        <summarizedField>QuoteLineItem.vlocity_cmt__EffectiveRecurringTotal__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FrameContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Frame contract linked to this quote</description>
        <label>Frame Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsContractRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if quote requires a contract</description>
        <label>Require Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LeadSource__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Phone Inquiry</fullName>
                </value>
                <value>
                    <fullName>Partner Referral</fullName>
                </value>
                <value>
                    <fullName>Purchased List</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberOfContractedMonths__c</fullName>
        <label>Number Of Contracted Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal__c</fullName>
        <label>One Time Total</label>
        <summarizedField>QuoteLineItem.vlocity_cmt__OneTimeTotal__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityAccountId__c</fullName>
        <description>Formula: opportunity&apos;s account identifier casted as a text value.</description>
        <formula>Opportunity.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginatingChannel__c</fullName>
        <description>Channel can be used to drive Eligibility/Compatibility/Recommendations/Pricing/Other implementations, e.g. Certain Product Bundles are only available on the Web or Call Center channel but not via the Retail and Dealer channels OR A product may have a different price when sold via the Web than sold via the Retail channel, etc.</description>
        <label>Originating Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PoDate__c</fullName>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PoNumber__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>vlocity_cmt__PriceList__c</referenceTo>
        <relationshipLabel>Quotes Using This Price List</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteTotal__c</fullName>
        <formula>vlocity_cmt__OneTimeTotal__c +  Tax + ( vlocity_cmt__RecurringTotal__c *  vlocity_cmt__NumberOfContractedMonths__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal__c</fullName>
        <label>Recurring Total</label>
        <summarizedField>QuoteLineItem.vlocity_cmt__RecurringTotal__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ShippingPostalCode__c</fullName>
        <formula>ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ShippingState__c</fullName>
        <formula>ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SyncedOrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Synced Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Customer - Upgrade</fullName>
                </value>
                <value>
                    <fullName>Existing Customer - Replacement</fullName>
                </value>
                <value>
                    <fullName>Existing Customer - Downgrade</fullName>
                </value>
                <value>
                    <fullName>New Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationDate__c</fullName>
        <description>Date of last validation run</description>
        <inlineHelpText>Date of last validation run</inlineHelpText>
        <label>Validation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationMessage__c</fullName>
        <description>Message from the last validation run</description>
        <inlineHelpText>Message from the last validation run</inlineHelpText>
        <label>Validation Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationStatus__c</fullName>
        <description>Status of the validation</description>
        <inlineHelpText>The result status of the last validation run</inlineHelpText>
        <label>Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet run</fullName>
                    <default>true</default>
                    <label>Not yet run</label>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>